--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,27 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    let olderThanNineteen = people.some(person => (new Date().getFullYear() - person.year) >= 19);
+    console.log(olderThanNineteen);
+
     // Array.prototype.every() // is everyone 19 or older?
+    let everyOlderThan =  people.every(person => (new Date().getFullYear() - person.year) >= 19);
+    console.log(everyOlderThan);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    let comment =  comments.find(comment => comment.id == 823423);
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    let idIndex = comments.findIndex(comment => comment.id == 823423);
+    console.log(idIndex);
+
     // delete the comment with the ID of 823423
+    comments.splice(idIndex, 1);
+    console.log(comments);
 
   </script>
 </body>
